so right now im using specific sizes for the individual squares, which is now my problem if i want to create a new grid. so i'll commit here if i ever make a mistake.

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
     flex-wrap: wrap;
     border: 1px solid blue;
     padding: 0.6em;
+    margin: 1em;
     height: 20.2em;
     width: 20.2em;
     gap: 2px;
