i added padding to the body in hopes that the elements won't hug the sides.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0.2em;
 }
 
 h1 {
