--- a/style.css
+++ b/style.css
@@ -59,3 +59,11 @@ h1 {
 .etch-square {
     border: 1px solid black;
 }
+
+.touch-leave-effect {
+    background-color: darkblue;
+}
+
+.touch-hover-effect {
+    background-color: blue;
+}
