--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ h1 {
     border: 1px solid black;
 }
 
-.touch-leave-effect {
+.touch-start-hover {
     background-color: darkblue;
 }
 
-.touch-hover-effect {
+.touch-end-hover {
     background-color: blue;
 }
